--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -10,3 +10,7 @@ DISABLE:
 SHOW_ELAPSED_TIME: true
 FILEIO_REPORTER: false
 # DISABLE_ERRORS: true # Uncomment if you want MegaLinter to detect errors but not block CI to pass
+
+CONSOLE_REPORTER: true
+CONSOLE_REPORTER_SECTIONS: true
+OUTPUT_DETAIL: simple
