--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -11,6 +11,8 @@ SHOW_ELAPSED_TIME: true
 FILEIO_REPORTER: false
 # DISABLE_ERRORS: true # Uncomment if you want MegaLinter to detect errors but not block CI to pass
 
+GITHUB_COMMENT_REPORTER: false
+
 CONSOLE_REPORTER: true
 CONSOLE_REPORTER_SECTIONS: true
-OUTPUT_DETAIL: simple
+OUTPUT_DETAIL: detailed
