--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,18 +1,11 @@
-# Configuration file for MegaLinter
-# See all available variables at https://oxsecurity.github.io/megalinter/configuration/ and in linters documentation
-
-APPLY_FIXES: none # all, none, or list of linter keys
-# ENABLE: # If you use ENABLE variable, all other languages/formats/tooling-formats will be disabled by default
-# ENABLE_LINTERS: # If you use ENABLE_LINTERS variable, all other linters will be disabled by default
-DISABLE:
-  # - COPYPASTE # Uncomment to disable checks of excessive copy-pastes
-  - SPELL # Comment to enable checks of spelling mistakes
-SHOW_ELAPSED_TIME: true
-FILEIO_REPORTER: false
-# DISABLE_ERRORS: true # Uncomment if you want MegaLinter to detect errors but not block CI to pass
-
-GITHUB_COMMENT_REPORTER: false
+APPLY_FIXES: none
 
 CONSOLE_REPORTER: true
 CONSOLE_REPORTER_SECTIONS: true
 OUTPUT_DETAIL: detailed
+GITHUB_COMMENT_REPORTER: false
+
+DISABLE:
+  - SPELL
+SHOW_ELAPSED_TIME: true
+FILEIO_REPORTER: false
