fix(linter): exclude tsconfig from json filter

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -6,6 +6,8 @@ CONSOLE_REPORTER_SECTIONS: true
 OUTPUT_DETAIL: detailed
 GITHUB_COMMENT_REPORTER: false
 
+JSON_FILTER_REGEX_EXCLUDE: '(tsconfig.json)'
+
 DISABLE:
   - SPELL
 SHOW_ELAPSED_TIME: true
