--- a/packages/server/.eslintrc.json
+++ b/packages/server/.eslintrc.json
@@ -1,13 +1,21 @@
 {
+  "root": true,
   "env": {
-    "browser": true,
+    "node": true,
     "es2021": true
   },
-  "extends": "standard-with-typescript",
-  "overrides": [],
+  "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {}
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "rules": {
+    "indent": ["error", 4],
+    "quotes": ["error", "double"],
+    "semi": ["error", "always"]
+  }
 }
