--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,15 +5,23 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev:start": "ts-node ./src/server.ts"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@types/express": "^4.17.14",
+    "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.0.1",
-    "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "typescript": "*"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "dotenv": "16.0.3",
+    "express": "4.18.2",
+    "google-auth-library": "8.6.0",
+    "googleapis": "108.0.0"
   }
 }
