fix(linter): enable just typescript eslint

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -8,6 +8,8 @@ GITHUB_COMMENT_REPORTER: false
 
 JSON_FILTER_REGEX_EXCLUDE: '(tsconfig.json)'
 
+ENABLE_LINTERS: TYPESCRIPT_ES
+
 DISABLE:
   - SPELL
 SHOW_ELAPSED_TIME: true
