--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/express-fileupload": "^1.4.1",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.2",
@@ -21,7 +23,9 @@
   "dependencies": {
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "express-fileupload": "1.4.0",
     "google-auth-library": "8.6.0",
-    "googleapis": "108.0.0"
+    "googleapis": "108.0.0",
+    "uuid": "9.0.0"
   }
 }
