--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,7 @@
     "express-fileupload": "1.4.0",
     "google-auth-library": "8.6.0",
     "googleapis": "108.0.0",
+    "redis": "4.4.0",
     "uuid": "9.0.0"
   }
 }
