--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "dev:start": "ts-node ./src/server.ts"
+    "dev:start": "ts-node ./src/server.ts",
+    "dev:deploy": "yarn run build && docker compose up --build -d"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -19,7 +20,8 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "tsc": "2.0.4",
+    "typescript": "4.8.4"
   },
   "dependencies": {
     "dotenv": "16.0.3",
