--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,8 @@
     "@types/express": "^4.17.14",
     "@types/express-fileupload": "^1.4.1",
     "@types/express-session": "^1.17.5",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.0.1",
@@ -32,6 +34,8 @@
     "googleapis": "108.0.0",
     "pino": "^8.7.0",
     "pino-http": "^8.2.1",
-    "redis": "4.4.0"
+    "redis": "4.4.0",
+    "swagger-jsdoc": "6.2.5",
+    "swagger-ui-express": "^4.6.0"
   }
 }
