--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,9 +7,11 @@
   "scripts": {
     "build": "tsc",
     "dev:start": "ts-node ./src/server.ts",
-    "dev:deploy": "yarn run build && docker compose up --build -d"
+    "dev:deploy": "yarn run build && docker compose up --build -d",
+    "test": "jest"
   },
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "@types/express": "^4.17.14",
     "@types/express-fileupload": "^1.4.1",
     "@types/express-session": "^1.17.5",
@@ -21,6 +23,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.3.1",
     "ts-node": "^10.9.1",
     "tsc": "2.0.4",
     "typescript": "4.8.4"
