--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,24 +6,32 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "dev:start": "ts-node ./src/server.ts",
+    "dev:start": "docker compose up --build -d redis && ts-node ./src/index.ts ",
+    "dev:stop": "docker compose down",
     "dev:deploy": "yarn run build && docker compose up --build -d",
-    "test": "jest"
+    "test": "yarn jest --debug --verbose",
+    "test:unit": "yarn jest ./__tests__/unit/",
+    "test:integration": "yarn jest ./__tests__/integration/",
+    "test:ci": "yarn jest --ci"
   },
   "devDependencies": {
     "@jest/globals": "^29.3.1",
     "@types/express": "^4.17.14",
     "@types/express-fileupload": "^1.4.1",
     "@types/express-session": "^1.17.5",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/parser": "^5.41.0",
+    "axios": "^1.2.1",
+    "docker-compose": "^0.23.17",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^29.3.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tsc": "2.0.4",
