build(tests): setup environment of integration tests w/ docker compose

--- a/packages/server/__tests__/integration/utils/docker-compose.test.yml
+++ b/packages/server/__tests__/integration/utils/docker-compose.test.yml
@@ -2,6 +2,6 @@ version: "3.9"
 services:
   cache:
     image: "redis:alpine"
-    container_name: "redis-for-test"
+    container_name: "redis-integration-test"
     ports:
       - "6379:6379"
