--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,12 +24,12 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/parser": "^5.41.0",
-    "axios": "^1.2.1",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^29.3.1",
+    "nock": "^13.2.9",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
